--- a/View/ProfileWindowPopup.xaml
+++ b/View/ProfileWindowPopup.xaml
@@ -29,52 +29,63 @@
                            Text="User Profile"
                            FontSize="12"
                            HorizontalAlignment="Center"/>
-                <StackPanel Grid.Row="2">
-                    <Button Height="15"
-                            Width="60">
-                        <Button.Style>
-                            <Style TargetType="Button">
-                                <Style.Resources>
-                                    <Style TargetType="Border">
-                                        <Setter Property="CornerRadius" Value="3"/>
-                                        <Setter Property="BorderThickness" Value="0"/>
-                                    </Style>
-                                </Style.Resources>
-                                <Setter Property="Background" Value="Red"/>
-                                <Setter Property="BorderThickness" Value="0"/>
-                                <Style.Triggers>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="PaleVioletRed"/>
-                                    </Trigger>
-                                </Style.Triggers>
-                            </Style>
-                        </Button.Style>
-                        <StackPanel Height="15"
-                                    Width="60"
-                                    Orientation="Horizontal"
-                                    FlowDirection="RightToLeft"
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Center">
+                <Button x:Name="btnLogout"                           
+                            BorderThickness="0"
+                            Foreground="White"
+                            FontSize="16"
+                            FontFamily="Montserrat"
+                            Cursor="Hand"
+                            Grid.Row="2"
+                            Click="btnMinimize_Click">
+
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Background" Value="Red"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="DarkRed"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Width="60" 
+                                    Height="15"
+                                    CornerRadius="3"
+                                    Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                    <Button.Content>
+                        <Grid FlowDirection="RightToLeft">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
                             <Path Data="{StaticResource LogutIcon}"
-                                  Grid.Column="1"
-                                  Width="10"
-                                  Height="10"
-                                  HorizontalAlignment="Center"
-                                  VerticalAlignment="Center"
-                                  Stretch="Uniform" 
-                                  Margin="0,0,0,0"
-                                  Fill="White"/>
-                            <TextBlock Grid.Column="0"
-                                       Text="Logout"
-                                       FontSize="10"
-                                       FontFamily="Leelawadee"
-                                       FontWeight="Bold"
-                                       Foreground="White"
-                                       VerticalAlignment="Center"
-                                       HorizontalAlignment="Center"/>
-                        </StackPanel>
-                    </Button>
-                </StackPanel>
+                              Grid.Column="0"
+                              Width="10"
+                              Height="10"
+                              HorizontalAlignment="Center"
+                              VerticalAlignment="Center"
+                              Stretch="Uniform" 
+                              Margin="0,0,5,0"
+                              Fill="White"/>
+                            <TextBlock Grid.Column="1"
+                                   Text="Logout"
+                                   FontSize="10"
+                                   FontFamily="Leelawadee"
+                                   FontWeight="Bold"
+                                   Foreground="White"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Center"/>
+                        </Grid>
+                    </Button.Content>
+                </Button>
             </Grid>
             <Border Grid.Row="0"
                     Grid.RowSpan="2"
