--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -77,7 +77,7 @@
                     BorderThickness="0"
                     Foreground="White"
                     Cursor="Hand"
-                    Click="MinimizeApp"
+                    Click="CloseApp"
                     Margin="5">
                     <Button.Content>
                         <Path Data="{StaticResource CloseAppIcon}" 
