material design SIUUUU

--- a/App.xaml
+++ b/App.xaml
@@ -17,9 +17,11 @@
                 <ResourceDictionary Source="/UserControls/Icons/MinimizeIcon.xaml"/>
                 <ResourceDictionary Source="/UserControls/Icons/CircleUserIcon.xaml"/>
                 <ResourceDictionary Source="/UserControls/Icons/MagnifyingGlassIcon.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
             </ResourceDictionary.MergedDictionaries>
-
-            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
