--- a/UserControls/StylishScrollBar.xaml
+++ b/UserControls/StylishScrollBar.xaml
@@ -8,7 +8,7 @@
                 <ControlTemplate TargetType="{x:Type Thumb}">
                     <Border x:Name="rectangle"
                                 SnapsToDevicePixels="True"
-                                Background="DarkGray"    
+                                Background="{StaticResource PrimaryHueDarkBrush}"    
                                 CornerRadius="3"
                                 Height="{TemplateBinding Height}"
                                 Width="{TemplateBinding Width}"/>
