--- a/View/HistoryPage.xaml
+++ b/View/HistoryPage.xaml
@@ -6,7 +6,6 @@
       xmlns:controller="clr-namespace:PinusPengger.ViewModel"
       xmlns:model="clr-namespace:PinusPengger.Model"
       xmlns:sys="clr-namespace:System;assembly=mscorlib"
-      xmlns:converter="clr-namespace:PinusPengger.ViewModel.Converter"
       mc:Ignorable="d" 
       d:DesignHeight="420" 
       d:DesignWidth="920">
@@ -68,17 +67,13 @@
                   AutoGenerateColumns="False"
                   Grid.Row="3"
                   CanUserAddRows="True">
-            <DataGrid.Resources>
-                <converter:PersonConverter x:Key="PersonConverter"/>
-                <converter:RoomConverter x:Key="RoomConverter"/>
-            </DataGrid.Resources>
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Kode Pemesanan" 
                                     Binding="{Binding KodePemesanan}"/>
                 <DataGridTextColumn Header="Nama" Width="200" 
-                                    Binding="{Binding Person,Converter={StaticResource PersonConverter}}"/>
+                                    Binding="{Binding Person}"/>
                 <DataGridTextColumn Header="Nomor Kamar" Width="*"  
-                                    Binding="{Binding Room, Converter={StaticResource RoomConverter}}"/>
+                                    Binding="{Binding Room}"/>
                 <DataGridTextColumn Header="Tanggal Checkin" Width="*" 
                                     Binding="{Binding CheckIn, StringFormat='dd/MM/yyyy'}"/>
                 <DataGridTextColumn Header="Tanggal Checkout" Width="*"  
