--- a/View/HomePage.xaml
+++ b/View/HomePage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PinusPengger.ViewModel.HomeController"
+﻿<Page x:Class="PinusPengger.View.HomePage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,9 +8,9 @@
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              d:DesignHeight="420" d:DesignWidth="920">
-    <UserControl.Resources>
+    <Page.Resources>
         <controller:Ticker x:Key="ticker"/>
-    </UserControl.Resources>
+    </Page.Resources>
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
@@ -80,4 +80,4 @@
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
-</UserControl>
+</Page>
