--- a/View/ReservasiPage.xaml
+++ b/View/ReservasiPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PinusPengger.ViewModel.ReservasiController"
+﻿<Page x:Class="PinusPengger.View.ReservasiPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -28,7 +28,7 @@
             </ComboBox>
         </StackPanel>
         <WrapPanel Grid.Row="2" Width="900">
-            
+
         </WrapPanel>
-    </Grid> 
-</UserControl>
+    </Grid>
+</Page>
